@@ -8,9 +8,6 @@ import io.vertx.core.DeploymentOptions;
 import io.vertx.core.Vertx;
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -166,8 +163,8 @@ public final class ModuleUtility {
 
   public static URL vertxUrl(String path) {
     try {
-      return new URI("http://localhost:%d%s".formatted(getPort(), path)).toURL();
-    } catch (MalformedURLException | URISyntaxException e) {
+      return new URL("http", "localhost", getPort(), path);
+    } catch (Exception e) {
       throw new RuntimeException(e);
     }
   }
